--- a/src/ch02/styles.css
+++ b/src/ch02/styles.css
@@ -1,8 +1,4 @@
-body{
-    background-color: black;
-}
-
-h1{
-    color: coral;
-    font-style: italic;
+h1 {
+    color : green;
+    font-style : italic;
 }
